src/objects/Phone_Call__c.object
<CustomObject>
    <description>Represents an individual phone call from the call centre</description>
    <fields>
        <fullName>Call_Duration__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Call duration in seconds</description>
        <label>Call Duration</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caller__c</fullName>
        <label>Caller</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <label>Phone Call</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Date__c</columns>
        <columns>Call_Duration__c</columns>
        <columns>Caller__c</columns>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Phone Call Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phone Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>